# the-english-parrot

./: .gitignore  Dockerfile  Makefile  TODO.md  anytags  bin  config.yml  devutils.py  domain.yml  endpoints.yml  graph.html  keywords_extraction  logs.txt  pyproject.toml  rasa-custom-channel  rasa-slot-types  requirements.txt  runactionserver.sh  setup.cfg  story_graph.dot  teaching_assistant.py  tmp.txt  tryit.py
TrainingLab/: TED_configurable_parameters.info  notebook.md  ted_policy_configuration_parameters-sheet01.csv  ted_policy_performance.csv  ted_policy_performance_happy_path.csv
TrainingStatistic/: ted_policy_configuration_parameters.csv  ted_policy_performance.csv  testcases__a_kiss.md
actions/: Dockerfile  actions.py  inspect.md  inspect.txt  print_slots.ipynb  print_slots.md  runactionserver.sh  text_to_float.ipynb  transformers-EQA.py.bk  utils.py
actions/.ipynb_checkpoints/: print_slots-checkpoint.ipynb
actions/tests/: test_actions.py
copy/: config.copy.yml  domain.copy.yml
copy/actions/: Dockerfile
data/: intnlu.md  intstories.md
data/core/: a_kiss.md  a_kiss__the_nlufallbackpolicy.md  a_kiss__the_nlufallbackpolicy.md__  a_kiss__the_predictionfallbackpolicy.md  a_kiss__the_predictionfallbackpolicy.md__  a_kiss__the_return.md  a_kiss__the_return.md__  a_kiss__the_story.md  a_kiss__the_story.md__  a_kiss__the_story.md__01  a_kiss__the_story.md__02  a_kiss__the_story.yml  a_kiss_the_return.md  changed__the_story.md  changed__the_story.md__  stories.md__
data/nlu/: a_kiss.md  a_kiss.md__  nlu.md__  (+8 more)
e2etest/: test.py
experiments/: ATG_20200713_053825_16534739.txt  ATG_20200713_053950_50683960.txt  a1.txt  aitextgent.py  transformers-nlg.py
script-content/: a_kiss_msa.md  a_kiss_msa_ans.md  a_kiss_msa_ques.md  seeing_doctor.md
(+55 files in other folders)
