[tool.poetry]
name = "yrparrot"
version = "0.1.0"
description = "A tutorial chatbot"
authors = ["Sang Dao <daosysang@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
rasacustompolicies = {path = "modules/rasa-custom-policies"}
rasaslottypes = {path = "modules/rasa-slot-types"}
doc2vec_service = {path = "modules/doc2vec-service"}
future = "^0.18.2"
nltk = "^3.5"
gensim = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
